infra/rustycloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rustycloud-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: ${RUSTYCLOUD_HOST}

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: rustycloud-service
            port:
              number: 80
